--- a/craft-kvass/src/index.html
+++ b/craft-kvass/src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
-      Кваст
+      <h1>Кваст</h1>
 
 История
 Производство
