--- a/craft-kvass/src/index.html
+++ b/craft-kvass/src/index.html
@@ -9,141 +9,69 @@
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
-      <h1>Кваст</h1>
+    <section class="header">
+      <div class="header-logo">
+        <img alt="Кваст" src="./img/logo.png" width="140" height="76">
+      </div>
+      <ul class="header-menu">
+        <li><a href="#">История</a></li>
+        <li><a href="#">Производство</a></li>
+        <li><a href="#">Ассортимент</a></li>
+        <li><a href="#">Где купить</a></li>
+      </ul>
+      <div class="header-message">Крафтовый квас <br>всему голова!</div>
+    </section>
 
-История
-Производство
-Ассортимент
-Где купить
-
-Крафтовый квас всему голова!
-
-
-
-Новинки
-
-Вахтёр
-
-Алк. &lt; 1%
-Ккал 35
-
-Ржаной хлеб, Вода, Солод, Соль
-
-Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!
-
-Подробнее
-Купить
-150 Р.
-
-Романтик
-
-Алк. &lt; 0,5%
-Ккал 27
-
-Ячменный хлеб, Вода, Солод, Апельсин
-
-Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.
-
-Подробнее
-Купить
-90 Р.
-
-
-
-Варим сами
-Вот этими самыми руками. Экспериментируем и творим, что хотим.
-
-Своё, родное
-Не заработка ради, а импортозамещения для. Поднимаем производство.
-
-Не экономим
-Человек это то, что он ест и пьёт. У нас только качественные ингредиенты.
-
-
-
-Немного истории
-
-Происхождение кваса
-
-Источник: ru.wikipedia.org
-
-Квас на Руси появился в X-XI веке. Само слово «квас» тоже имеет древнерусское происхождение. Помимо России квас готовят в Белоруссии, Сербии, Македонии, Словакии и многих других странах, но называется он везде одинаково — квас.
-
-Классификация кваса
-
-Источник: ru.wikipedia.org
-
-По российскому ГОСТу для промышленного изготовления — это напиток с объёмной долей этилового спирта не более 1,2%, изготовленный в результате незавершённого спиртового и молочнокислого брожения сусла.
-
-
-
-Пресса о нас
-
-Сегодня мы провели дегустацию чего-то действительно новенького — крафтового кваса. Да, да, вы не ослышались! Спасибо Арсену и Руслану за то, что предоставили целую бочку своего напитка!
-
-Газета столичный Стольник
-
-Читать далее
-
-
-
-Ассортимент
-
-Название
-Алк.
-Ккал
-Объём
-Стоимость
-
-Классика
-&lt; 1,2%
-33
-330 мл
-120 Р.
-
-Шабаш
-&gt; 1,2%
-45
-330 мл
-250 Р.
-
-Вахтёр Новинка
-&lt; 1%
-35
-0,5 л
-150 Р.
-
-Романтик Новинка
-&lt; 0,5%
-27
-0,5 л
-90 Р.
-
-
-
-Заказать
-
-Не ждите пока нас отрекламируют, как Вятский квас, и мы поднимем цены! Закажите настоящий крафтовый квас сейчас. При заказе от 10 баррелей — скидка 10%.
-
-Представьтесь:
-Номер телефона:
-Доп. номер:
-Email:
-Объём заказа:
-От 5 до 10 баррелей в неделю
-Доп. комментарий:
-Я согласен получать квасную рассылку
-Отправить заказ
-
-
-
-Инстаграм
-Фейсбук
-Вконтакте
-
-При перепечатке материалов ссылка на сайт обязательна!
-
-Разработчик: HTML Academy
-
+    <section class="innovation">
+      <h2>Новинки</h2>
+      <div class="innovation-items">
+        <div class="innovation-item">
+          <h3>Вахтёр</h3>
+          <div class="innovation-table">
+            <table>
+  		  	     <tr>
+  		  		     <td>Алк. </td>
+  		  		     <td>&lt; 1%</td>
+  		  	     </tr>
+  		  	     <tr>
+  		  		     <td>Ккал</td>
+  		  		     <td>35</td>
+  		  	     </tr>
+  		       </table>
+          </div>
+          <p>Ржаной хлеб, Вода, Солод, Соль</p>
+          <img src="./img/bottle-left.jpg" width="319" height="459">
+          <p>Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
+          <div class="innovation-btns">
+            <a href="#">Подробнее</a>
+            <a href="#">Купить</a>
+            <b>150 Р.</b>
+          </div>
+        </div>
+        <div class="innovation-item">
+          <h3>Романтик</h3>
+          <div class="innovation-table">
+            <table>
+              <tr>
+                <td>Алк. </td>
+                <td>&lt; 0,5%</td>
+              </tr>
+              <tr>
+                <td>Ккал</td>
+                <td>27</td>
+              </tr>
+            </table>
+          </div>
+          <p>Ячменный хлеб, Вода, Солод, Апельсин</p>
+          <img src="./img/bottle-right.jpg" width="319" height="459">
+          <p>Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
+          <div class="innovation-btns">
+            <a href="#">Подробнее</a>
+            <a href="#">Купить</a>
+            <b>90 Р.</b>
+          </div>
+        </div>
+      </div>
+  </section>
   </body>
 </html>
