--- a/craft-kvass/src/index.html
+++ b/craft-kvass/src/index.html
@@ -1,17 +1,17 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Кваст</title>
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.min.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
     <section class="header">
       <div class="header-logo">
-        <img alt="Кваст" src="./img/logo.png" width="140" height="76">
+        <img alt="Кваст" src="./img/logo.png" width="140" height="76" />
       </div>
       <ul class="header-menu">
         <li><a href="#">История</a></li>
@@ -19,7 +19,7 @@
         <li><a href="#">Ассортимент</a></li>
         <li><a href="#">Где купить</a></li>
       </ul>
-      <div class="header-message">Крафтовый квас <br>всему голова!</div>
+      <div class="header-message">Крафтовый квас <br />всему голова!</div>
     </section>
 
     <section class="innovation">
@@ -29,19 +29,22 @@
           <h3>Вахтёр</h3>
           <div class="innovation-table">
             <table>
-  		  	     <tr>
-  		  		     <td>Алк. </td>
-  		  		     <td>&lt; 1%</td>
-  		  	     </tr>
-  		  	     <tr>
-  		  		     <td>Ккал</td>
-  		  		     <td>35</td>
-  		  	     </tr>
-  		       </table>
+              <tr>
+                <td>Алк.</td>
+                <td>&lt; 1%</td>
+              </tr>
+              <tr>
+                <td>Ккал</td>
+                <td>35</td>
+              </tr>
+            </table>
           </div>
           <p>Ржаной хлеб, Вода, Солод, Соль</p>
-          <img src="./img/bottle-left.jpg" width="319" height="459">
-          <p>Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
+          <img src="./img/bottle-left.jpg" width="319" height="459" />
+          <p>
+            Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и
+            придаст сил для вечерних приключений!
+          </p>
           <div class="innovation-btns">
             <a href="#">Подробнее</a>
             <a href="#">Купить</a>
@@ -53,7 +56,7 @@
           <div class="innovation-table">
             <table>
               <tr>
-                <td>Алк. </td>
+                <td>Алк.</td>
                 <td>&lt; 0,5%</td>
               </tr>
               <tr>
@@ -63,8 +66,11 @@
             </table>
           </div>
           <p>Ячменный хлеб, Вода, Солод, Апельсин</p>
-          <img src="./img/bottle-right.jpg" width="319" height="459">
-          <p>Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
+          <img src="./img/bottle-right.jpg" width="319" height="459" />
+          <p>
+            Лёгкий и освежающий напиток поможет сохранять отличное настроение в
+            течение всего дня.
+          </p>
           <div class="innovation-btns">
             <a href="#">Подробнее</a>
             <a href="#">Купить</a>
@@ -72,6 +78,208 @@
           </div>
         </div>
       </div>
-  </section>
+    </section>
+
+    <section class="advantage">
+      <ul class="advantage-items">
+        <li class="advantage-item">
+          <h2>Варим сами</h2>
+          Вот этими самыми руками. Экспериментируем и творим, что хотим.
+        </li>
+        <li class="advantage-item">
+          <h2>Своё, родное</h2>
+          Не заработка ради, а импортозамещения для. Поднимаем производство.
+        </li>
+        <li class="advantage-item">
+          <h2>Не экономим</h2>
+          Человек это то, что он ест и пьёт. У нас только качественные
+          ингредиенты.
+        </li>
+      </ul>
+    </section>
+
+    <section class="history">
+      <h2>Немного истории</h2>
+      <dl>
+        <dt>
+          Происхождение кваса
+          <i
+            >Источник:
+            <a href="https://ru.wikipedia.org" target="_blank"
+              >ru.wikipedia.org</a
+            ></i
+          >
+        </dt>
+        <dd>
+          <img src="./img/wiki-1.png" alt="" width="200" height="101" />
+          <p>
+            Квас на Руси появился в X-XI веке. Само слово «квас» тоже имеет
+            древнерусское происхождение. Помимо России квас готовят в
+            Белоруссии, Сербии, Македонии, Словакии и многих других странах, но
+            называется он везде одинаково — квас.
+          </p>
+        </dd>
+
+        <dt>
+          Классификация кваса
+          <i
+            >Источник:
+            <a href="https://ru.wikipedia.org" target="_blank"
+              >ru.wikipedia.org</a
+            ></i
+          >
+        </dt>
+        <dd>
+          <img src="./img/wiki-2.png" alt="" width="200" height="101" />
+          <p>
+            По российскому ГОСТу для промышленного изготовления — это напиток с
+            объёмной долей этилового спирта не более 1,2%, изготовленный в
+            результате незавершённого спиртового и молочнокислого брожения
+            сусла.
+          </p>
+        </dd>
+      </dl>
+    </section>
+
+    <section class="press">
+      <h2>Пресса о нас</h2>
+      <div class="press-items">
+        <blockquote class="press-item">
+          <p>
+            Сегодня мы провели дегустацию чего-то действительно новенького —
+            крафтового кваса. Да, да, вы не ослышались! Спасибо Арсену и Руслану
+            за то, что предоставили целую бочку своего напитка!
+          </p>
+          <cite>Газета столичный Стольник</cite>
+          <a href="#">Читать далее</a>
+        </blockquote>
+      </div>
+    </section>
+
+    <section class="price">
+      <h2>Ассортимент</h2>
+      <table class="price-list">
+        <thead>
+          <tr>
+            <th>Название</th>
+            <th>Алк.</th>
+            <th>Ккал</th>
+            <th>Объём</th>
+            <th>Стоимость</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Классика</td>
+            <td>&lt; 1,2%</td>
+            <td>33</td>
+            <td>330 мл</td>
+            <td>120 Р.</td>
+          </tr>
+          <tr>
+            <td>Шабаш</td>
+            <td>&gt; 1,2%</td>
+            <td>45</td>
+            <td>330 мл</td>
+            <td>250 Р.</td>
+          </tr>
+          <tr>
+            <td>Вахтёр <sup>Новинка</sup></td>
+            <td>&lt; 1%</td>
+            <td>35</td>
+            <td>0,5 л</td>
+            <td>150 Р.</td>
+          </tr>
+          <tr>
+            <td>Романтик <sup>Новинка</sup></td>
+            <td>&lt; 0,5%</td>
+            <td>27</td>
+            <td>0,5 л</td>
+            <td>90 Р.</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <section class="order">
+      <form class="order-form" action="/form-mail" method="post">
+        <h2>Заказать</h2>
+        <p>
+          Не ждите пока нас отрекламируют, как Вятский квас, и мы поднимем цены!
+          Закажите настоящий крафтовый квас сейчас. При заказе от 10 баррелей —
+          скидка 10%.
+        </p>
+
+        <div class="order-group">
+          Представьтесь:
+          <input type="text" name="client" id="client" />
+        </div>
+
+        <div class="order-group">
+          Номер телефона:
+          <input type="text" name="phone" id="phone" />
+        </div>
+
+        <div class="order-group">
+          Доп. номер:
+          <input type="text" name="add-phone" id="add-phone" />
+        </div>
+
+        <div class="order-group">
+          Email:
+          <input type="email" name="email" id="email" />
+        </div>
+
+        <div class="order-group">
+          <label for="volume-of-order">Объём заказа:</label>
+          <br />
+          <select name="volume-of-order" id="volume-of-order">
+            <option value="1" selected>От 5 до 10 баррелей в неделю</option>
+            <option value="2">От 10-15 баррелей в неделю</option>
+            <option value="3">От 15 баррелей в неделю</option>
+          </select>
+        </div>
+
+        <div class="order-group">
+          <label for="comment">Доп. комментарий:</label>
+          <textarea name="comment" id="comment" placeholder=""></textarea>
+        </div>
+
+        <div class="order-group">
+          <input type="checkbox" name="agreement" id="agreement" checked />
+          <label for="agreement">Я согласен получать квасную рассылку</label>
+        </div>
+
+        <div class="order-group">
+          <input type="submit" value="Отправить заказ" />
+        </div>
+      </form>
+    </section>
+
+    <section class="footer">
+      <div class="footer-logo">
+        <img alt="Кваст" src="./img/logo.png" width="140" height="76" />
+      </div>
+      <ul class="footer-menu">
+        <li><a href="#">История</a></li>
+        <li><a href="#">Производство</a></li>
+        <li><a href="#">Ассортимент</a></li>
+        <li><a href="#">Где купить</a></li>
+      </ul>
+      <div class="footer-social">
+        <a href="#" target="_self">Инстаграм</a>
+        <a href="#" target="_self">Фейсбук</a>
+        <a href="#" target="_self">Вконтакте</a>
+      </div>
+      <div class="footer-message">
+        <p>При перепечатке материалов ссылка на сайт обязательна!</p>
+      </div>
+      <div class="copyright">
+        <img src="./img/htmlacademy.png" /><strong>Разработчик: </strong
+        ><a href="https://htmlacademy.ru" title="Перейти на сайт разработчика"
+          >HTML Academy</a
+        >
+      </div>
+    </section>
   </body>
 </html>
