--- a/craft-kvass/src/index.html
+++ b/craft-kvass/src/index.html
@@ -10,16 +10,18 @@
   </head>
   <body>
     <section class="header">
-      <div class="header-logo">
-        <img alt="Кваст" src="./img/logo.png" width="140" height="76" />
+      <div class="container container--narrow">
+        <div class="logo">
+          <img alt="Кваст" src="/img/logo.png" width="140" height="76" />
+        </div>
+        <ul class="menu clearfix">
+          <li class="menu__item"><a href="#">История</a></li>
+          <li class="menu__item"><a href="#">Где купить</a></li>
+          <li class="menu__item"><a href="#">Производство</a></li>
+          <li class="menu__item"><a href="#">Ассортимент</a></li>
+        </ul>
+        <div class="header__message">Крафтовый квас <br />всему голова!</div>
       </div>
-      <ul class="header-menu">
-        <li><a href="#">История</a></li>
-        <li><a href="#">Производство</a></li>
-        <li><a href="#">Ассортимент</a></li>
-        <li><a href="#">Где купить</a></li>
-      </ul>
-      <div class="header-message">Крафтовый квас <br />всему голова!</div>
     </section>
 
     <section class="innovation">
